# thrift_test

./: CMakeLists.txt  Dockerfile  README.md  conan.patch  conanfile.txt  docker-compose.yml  install_depends.sh  requirements.txt  run_buildbox.sh
client/: CMakeLists.txt  PythonClient.py
client/src/: CppClient.cpp
server/: CMakeLists.txt
server/src/: CppServer.cpp
